# TinkerMotion

./: CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt
src/TinkerMotionGUI/: CameraPanel.cpp  CameraPanel.h  ControlPanel.cpp  ControlPanel.h  Main.cpp  MainWindow.cpp  MainWindow.h  ProcessPanel.cpp  ProcessPanel.h  ProjectPanel.cpp  ProjectPanel.h  View3DPanel.cpp  View3DPanel.h
src/TinkerMotionLib/: CameraDevice.cpp  CameraDevice.h  TinkerMotionSystem.cpp  TinkerMotionSystem.h
